--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ remote_theme: just-the-docs/just-the-docs
 color_scheme: dark
 plugins:
   - jekyll-feed
+  - jekyll-gfm-admonitions
 
 # Exclude from processing.
 # The following items will not be processed, by default.
